# Grimoire2D

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: __init__.py  console_demo.py  editor_mockup.py  input_demo.py  minimal_window.py  primitives_showcase.py  renderer3d_phase1_demo.py  renderer3d_phase2_demo.py  renderer3d_phase4_demo.py  scene_demo.py
docs/: design-goals.md
docs/proposals/: 0001-data-model-architecture.md  0002-minimal-game-loop-incremental-plan.md  0003-chunk-0-scaffolding.md
src/grimoire2d/: __init__.py
src/grimoire2d/gui/: console.py
src/grimoire2d/logic/: __init__.py  scaling.py  scene_ops.py
src/grimoire2d/models/: __init__.py  config.py  render_settings_3d.py  virtual_resolution.py
src/grimoire2d/presentation/: __init__.py  batch.py  highdpi.py  pixel_buffer.py  renderer.py  renderer3d.py  shaders.py  shaders3d.py  tcp_transport.py  window.py
tests/: __init__.py  test_actor.py  test_collision.py  test_import.py  test_models.py  test_pixel_buffer.py  test_scene.py  test_scene_graph.py  test_scene_ops.py  test_sdf.py
